--- a/src/app/weather/components/current-weather/current-weather.component.html
+++ b/src/app/weather/components/current-weather/current-weather.component.html
@@ -1,6 +1,6 @@
-<mat-card class="weather-card">
+<mat-card class="current-weather">
   <mat-card-header>
-    <mat-card-title>Current Conditions</mat-card-title>
+    <mat-card-title>{{selectedLocationDetails.AdministrativeArea.LocalizedName}},{{selectedLocationDetails.Country.LocalizedName}}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="weather-info">
@@ -9,14 +9,16 @@
           <p>{{ currentConditions?.Temperature?.Metric?.Value }} {{ currentConditions?.Temperature?.Metric?.Unit }}°</p>
         </ng-container>
         <ng-template #fahrenheitTemplate>
-          <p>{{ currentConditions?.Temperature?.Imperial?.Value }} {{ currentConditions?.Temperature?.Imperial?.Unit }}°</p>
+          <p>{{ currentConditions?.Temperature?.Imperial?.Value }} {{ currentConditions?.Temperature?.Imperial?.Unit }}°
+          </p>
         </ng-template>
       </div>
       <div class="weather-text">
         <p>{{ currentConditions.WeatherText }}</p>
       </div>
       <div class="weather-icon">
-        <img [src]="getIconUrl(currentConditions.WeatherIcon)" alt="{{ currentConditions.WeatherText }} icon">
+        <img class="icon" [src]="getIconUrl(currentConditions.WeatherIcon)"
+          alt="{{ currentConditions.WeatherText }} icon">
       </div>
     </div>
   </mat-card-content>
