--- a/src/app/weather/components/five-day-forecast/daily-forecast/daily-forecast.component.scss
+++ b/src/app/weather/components/five-day-forecast/daily-forecast/daily-forecast.component.scss
@@ -1,33 +1,40 @@
 .daily-forecast {
   display: flex;
   justify-content: center;
-  padding: 16px;
-  overflow: hidden; /* מונע גלילה */
 }
 
 .forecast-details {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+ width: 100%;
+  max-width: 600px;
+}
+
+.date {
+  text-align: left;
+}
+
+.temperature {
   text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.icon {
+  text-align: right;
+  display: flex;
 }
 
 .weather-icon {
   width: 50px;
-  height: 50px;
-  margin-top: 8px;
+  height: auto;
 }
 
-@media (min-width: 640px) {
-  .forecast-details {
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: left;
-  }
+@media (max-width: 1040px) {
 
-  .weather-icon {
-    width: 75px;
-    height: 75px;
-    margin-top: 0;
+  .date, .temperature, .icon {
+    text-align: left;
+    margin-bottom: 10px;
   }
 }
