--- a/src/app/weather/components/five-day-forecast/five-day-forecast.component.html
+++ b/src/app/weather/components/five-day-forecast/five-day-forecast.component.html
@@ -1,14 +1,11 @@
 <div *ngIf="fiveDayForecast" class="details-container">
   <mat-card>
-    <mat-card-header>
-      <mat-card-title>5-Day Forecast</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="forecast-grid">
-        <div *ngFor="let day of fiveDayForecast.DailyForecasts" class="forecast-item">
+    <mat-list>
+      <div *ngFor="let day of fiveDayForecast.DailyForecasts" class="forecast-item">
+        <mat-list-item>
           <app-daily-forecast [dailyForecast]="day"></app-daily-forecast>
-        </div>
+        </mat-list-item>
       </div>
-    </mat-card-content>
+    </mat-list>
   </mat-card>
 </div>
