--- a/src/app/weather/components/five-day-forecast/five-day-forecast.component.scss
+++ b/src/app/weather/components/five-day-forecast/five-day-forecast.component.scss
@@ -1,22 +1,22 @@
 .details-container {
   display: flex;
   justify-content: center;
-  padding: 16px;
+  max-width: 400px;
 }
 
-.forecast-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 16px;
+mat-list {
+  width: 100%;
+  max-width: 1200px;
 }
 
 .forecast-item {
   display: flex;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
-@media (min-width: 640px) {
-  .forecast-grid {
-    grid-template-columns: repeat(5, 1fr);
+@media (max-width: 1040px) {
+  .forecast-item {
+    flex-direction: column;
   }
 }
