--- a/src/app/weather/components/search/search.page.scss
+++ b/src/app/weather/components/search/search.page.scss
@@ -20,7 +20,7 @@
   margin-right: 8px;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 1040px) {
   .search-container {
     flex-direction: row;
     justify-content: center;
@@ -32,5 +32,11 @@
 
   .location-option {
     flex-direction: row;
+  }
+
+  .search-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
   }
 }
